# laloo-sae

./: .gitignore  README.md  flagged_poses_top5.csv  main.py  near_miss_feat41.csv  pyproject.toml
configs/: config.yaml
laloo_sae_env/: pyvenv.cfg
notebooks/: ablation_2.ipynb  example.ipynb  interpretability.ipynb  jup_server.bash  latent_analysis.ipynb  sae.ipynb  sae_all.ipynb  threshold_4.ipynb  v1.ipynb
src/: __init__.py  analysis.py  config.py  data_loader.py  data_processor.py  dataloader.py  latent_analysis.py  model.py  train.py  utils.py
